--- a/package.json
+++ b/package.json
@@ -7,14 +7,32 @@
     "dependencies": {
         "compression": "^1.7.4",
         "express": "^4.17.1",
-        "helmet": "^4.2.0"
+        "express-session": "^1.17.1",
+        "jsonwebtoken": "^8.3.0",
+        "helmet": "^4.2.0",
+        "lwc-services": "^2.3.0",
+        "lwc-webpack-plugin": "^0.3.0",
+        "redis": "^3.0.2",
+        "@salesforce-ux/design-system": "2.13.7",
+        "@lwc/synthetic-shadow": "^1.8.7",
+        "sfcc-ci": "git://github.com/jordanebachelet/sfcc-ci.git#64291544bdf9bd4709f9e4c6eefcce561241d5ac"
     },
     "devDependencies": {
+        "compression": "^1.7.4",
+        "express": "^4.17.1",
+        "express-session": "^1.17.1",
         "eslint": "^7.15.0",
+        "jsonwebtoken": "^8.3.0",
+        "helmet": "^4.2.0",
         "husky": "^4.3.4",
         "lint-staged": "^10.5.3",
         "lwc-services": "^2.3.0",
-        "prettier": "^2.2.1"
+        "prettier": "^2.2.1",
+        "redis": "^3.0.2",
+        "@salesforce-ux/design-system": "2.13.7",
+        "lwc-webpack-plugin": "^0.3.0",
+        "@lwc/synthetic-shadow": "^1.8.7",
+        "sfcc-ci": "git://github.com/jordanebachelet/sfcc-ci.git#64291544bdf9bd4709f9e4c6eefcce561241d5ac"
     },
     "engines": {
         "node": ">=10.13.0",
@@ -42,7 +60,8 @@
     "repository": "jbachelet/sfcc-sandboxes-manager",
     "scripts": {
         "build": "lwc-services build -m production -w webpack.config.js",
-        "build:development": "lwc-services build -w webpack.config.js",
+        "build:development": "lwc-services build -w webpack.config.js && npm run renameSlds",
+        "renameSlds": "node ./build/renameSldsStyles.js",
         "lint": "eslint ./src/**/*.js",
         "prettier": "prettier --write \"**/*.{css,html,js,json,md,ts,yaml,yml}\"",
         "prettier:verify": "prettier --list-different \"**/*.{css,html,js,json,md,ts,yaml,yml}\"",
