--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "author": "Jordane BACHELET",
     "bugs": "https://github.com/jbachelet/sfcc-sandboxes-manager/issues",
     "dependencies": {
+        "axios": "^0.21.0",
         "compression": "^1.7.4",
+        "cookie-parser": "^1.4.5",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "jsonwebtoken": "^8.3.0",
